--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.social-btn {
+    border: 2px solid burlywood;
+    border-radius: 15px;
+    background-color: lightyellow;
+    font-family: tahoma;
+    padding: 8px;
+    text-align: center;
+}
