--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -12,7 +12,7 @@
   </div>
 
   <div class="col-md-8">
-    <%= form_for [@post.topic, @post] do |f| %>
+    <%= form_for [@topic, @post] do |f| %>
 
       <div class="form-group">
         <%= f.label :title %>
