--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,11 +1,35 @@
 <h1><%= @topic.name %></h1>
+<p class="lead"><%= @topic.description %></p>
 
 <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
 <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %>
+<br></br>
 
 <div class="row">
   <div class="col-md-8">
-    <p class="lead"><%= @topic.description %></p>
+    <h3>Sponsored Posts: </h3>
+    <% @topic.sponsored_posts.each do |sponsored_post| %>
+      <div class="media">
+        <div class="media-body">
+          <h4 class="media-heading">
+            <%= link_to sponsored_post.title, topic_sponsored_post_path(@topic, sponsored_post) %> - $<%= sponsored_post.price %>
+          </h4>
+          <small>
+            submitted <%= time_ago_in_words(sponsored_post.created_at) %>
+          </small>
+        </div>
+      </div>
+    <% end %>
+  </div>
+  <div class="col-md-4">
+    <%= link_to "New Sponsored Post", new_topic_sponsored_post_path(@topic), class: 'btn btn-success' %>
+  </div>
+</div>
+<br> </br>
+
+<div class="row">
+  <div class="col-md-8">
+    <h3>Public Posts: </h3>
     <% @topic.posts.each do |post| %>
       <div class="media">
         <div class="media-body">
