--- a/app/views/users/confirm.html.erb
+++ b/app/views/users/confirm.html.erb
@@ -20,6 +20,6 @@
                          action: "new",
                          params: params},
                          class: 'btn btn-failure',
-                         :method => :get %>
+                         method: :get %>
   </div>
 </div>
