added gravatar and modified style

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,13 @@
   margin-top: 9px;
 }
 
+.pull-right {
+  margin-left: 10px;
+  margin-top: 5px;
+  font-family: monospace;
+  color: darkgreen;
+}
+
 .nav {
   margin-top: 5px;
 }
