--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,9 +9,11 @@
   <div class="col-md-8">
     <p><%= @post.body %></p>
   </div>
-  <% if user_is_authorized_for_post?(@post) %>
+  <% if user_is_authorized_for_create_or_update_post?(@post) %>
     <div class="col-md-4">
       <%= link_to "Edit", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
+  <% end %>
+  <% if user_is_authorized_for_delete_post?(@post) %>
       <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this post?'} %>
     </div>
   <% end %>
