updated models spec with new factories and member profile view page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,8 +19,16 @@
    </div>
  </div>
 
- <h2>Posts</h2>
- <%= render @user.posts %>
+<% if user_has_posts?(@user) == true %>
+  <h2>Posts</h2>
+  <%= render @user.posts %>
+<% else %>
+  <h4> <%= @user.name %> has not submitted any posts yet. </h4>
+<% end %>
 
- <h2>Comments</h2>
- <%= render @user.comments %>
+<% if user_has_comments?(@user) == true %>
+  <h2>Comments</h2>
+  <%= render @user.comments %>
+<% else %>
+  <h4> <%= @user.name %> has not submitted any comments yet. </h4>
+<% end %>
